tests/init_state/projection/downcast_read_checks_root_var.sim

        enum Option: Copy + Drop { None: unit Some: i64 }
        fn f() {
          o: Option;
          a: i64;
          entry:
            a = copy o as Some;
            return
        }
        